--- a/server/main/templates/main/contact.html
+++ b/server/main/templates/main/contact.html
@@ -1,24 +1,11 @@
-<!DOCTYPE html>
-<html>
+{% extends 'server/master.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>контакты</title>
-    <link rel="stylesheet" href="/static/main/css/style.css">
-</head>
+{% block page_title%}
+контакты
+{% endblock %}
 
-<body>
-    <div class="container">
-        <div class="header">
-           <a href="/"><img src="/static/main/assets/logo.png"></a>
-            <a href="/"><span>товары для рыбалки</span></a>
-            <ul class="menu">
-                <li><a href="/">Главная</a></li>
-                <li><a href="/catalog/">Каталог</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </div>
-        <div class="content">
+{% block page_content%}
+
             <h1>контакты</h1>
             <h2>Напишите нам</h2>
             <form class="form_input" action="#" method="post">
@@ -43,11 +30,4 @@
             <!--    Контактный номер телефона интернет-магазина Адрес Email-->
 
             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A09ed95c0023628488df6af63d3146c59d3e34e49b51baa4c239ae70f0cc2a1d1&amp;width=400&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
-        </div>
-        <div class="footer">
-            <p>&copy; &laquo;Все права защищены&raquo;</p>
-        </div>
-    </div>
-</body>
-
-</html>
+{% endblock %}
